// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Car opens modal 1`] = `
<Fragment>
  <ClickableCell
    className="success"
    onClick={[Function]}
  >
    <StarIcon />
    <span>
       
    </span>
    Mazda Cup
  </ClickableCell>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={
      Array [
        4,
      ]
    }
    isOpen={false}
    onClose={[Function]}
    ownedCars={
      Array [
        5,
      ]
    }
    seriesName="Mazda Cup"
  />
</Fragment>
`;

exports[`components/columns/Car opens modal 2`] = `
<Fragment>
  <ClickableCell
    className="success"
    onClick={[Function]}
  >
    <StarIcon />
    <span>
       
    </span>
    Mazda Cup
  </ClickableCell>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={
      Array [
        4,
      ]
    }
    isOpen={false}
    onClose={[Function]}
    ownedCars={
      Array [
        5,
      ]
    }
    seriesName="Mazda Cup"
  />
</Fragment>
`;

exports[`components/columns/Car renders correctly 1`] = `
<Fragment>
  <ClickableCell
    className=""
    onClick={[Function]}
  >
    <span>
       
    </span>
    Mazda Cup
  </ClickableCell>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={Array []}
    isOpen={false}
    onClose={[Function]}
    ownedCars={Array []}
    seriesName="Mazda Cup"
  />
</Fragment>
`;

exports[`components/columns/Car renders owned, favourite 1`] = `
<Fragment>
  <ClickableCell
    className="success"
    onClick={[Function]}
  >
    <StarIcon />
    <span>
       
    </span>
    Mazda Cup
  </ClickableCell>
  <CarModal
    carIds={
      Array [
        4,
        5,
      ]
    }
    favouriteCars={
      Array [
        4,
      ]
    }
    isOpen={false}
    onClose={[Function]}
    ownedCars={
      Array [
        5,
      ]
    }
    seriesName="Mazda Cup"
  />
</Fragment>
`;
